--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 #指定运行环境
-language: node_js
+language: python
 #指定nodejs版本，可以指定多个
-node_js:
-  - 0.12.5
+#node_js:
+#  - 0.12.5
 
 #运行的脚本命令
 script: true
